social icons aligned right and fixed gray padding about main and sticky nav

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ row {
 }
 
 /*/////// Navigation ///////*/
-.navigation {
+.nav-style {
     padding-top: 10px;
     position: fixed;
     top: 0;
